--- a/my-app/src/components/header.css
+++ b/my-app/src/components/header.css
@@ -3,7 +3,84 @@
     top: 0;
     left: 0;
     width: 100%;
-    display: flex;
-    justify-content: space-around;
+    height: 10vh ;
+    font-family: Arima;
+    display: none;
+    justify-content: space-between;
     align-items: center;
+    transition: 0.6s;
+    padding: 0;
+    z-index: 1;
+    opacity: 1;
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+.sticky{
+    display: flex;
+    background-color: white;
+    height: auto;
+}
+.logo{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header_name{
+    font-family: Arima;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 39px;
+    color: #000000;
+    margin: 1rem;
+}
+.header_logo{
+    width: auto;
+    fill: #7354CC;
+    height: 8vh;
+    position: relative;
+    color: black;
+    padding: 0;
+    margin-left: 1vw;
+    text-decoration: none;
+    transition: 1s;
+}
+.header ul{
+    list-style: none;
+    font-family: Arima;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.2rem;
+    color: #000000;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header ul li a{
+    position: relative;
+    margin: 0 3rem;
+    text-decoration: none;
+    color: black;
+    font-weight: 500px;
+    transition: 0.6s;
+}
+.header ul li a:hover{
+    color: #7354CC;
+    font-weight: 700;
+    transition: all ease 0.6s;
+}
+.header_button{
+    background: #7354CC;
+    border-radius: 90px;
+    font-family: Bebas-Neue;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 43px;
+    color: #FFFFFF;
+    width: 100%;
+    padding: 0.5vh 4vh;
 }
