--- a/my-app/src/components/header.css
+++ b/my-app/src/components/header.css
@@ -1,14 +1,13 @@
 .header{
     position: fixed;
-    top: 0;
+    top: -11vh;
     left: 0;
     width: 100%;
     height: 10vh ;
+    display: flex;
     font-family: Arima;
-    display: none;
     justify-content: space-between;
     align-items: center;
-    transition: 0.6s;
     padding: 0;
     z-index: 1;
     opacity: 1;
@@ -17,6 +16,8 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 .sticky{
+    transition:all 0.6s ease-in-out;
+    top: 0;
     display: flex;
     background-color: white;
     height: auto;
