--- a/my-app/src/components/WhyWeFund.css
+++ b/my-app/src/components/WhyWeFund.css
@@ -34,3 +34,88 @@
     margin: 10% 10%;
     color: #000000;
 }
+@media screen and (max-width: 426px) and (min-width: 300px){
+    .why__heading{
+        font-size: 2.5rem;
+    }
+    .why__row{
+        grid-template-columns: auto ;
+    }
+    .why__logo{
+        height: 10vh;
+    }
+    .why__text{
+        font-size: 1rem;
+    }
+}
+
+
+@media screen and (max-width: 650px) and (min-width: 426px){
+    
+}
+
+@media screen and  (max-width: 768px) and (min-width: 650px){
+    
+}
+
+@media screen and  (max-width: 900px) and (min-width: 768px){
+    .why__heading{
+        font-size: 3.5rem;
+    }
+    .why__row{
+        grid-template-columns: auto auto;
+    }
+    .why__logo{
+        height: 10vh;
+    }
+    .why__text{
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and  (max-width: 1200px) and (min-width: 900px){
+    .why__heading{
+        font-size: 3.5rem;
+    }
+    .why__row{
+        grid-template-columns: auto auto auto;
+    }
+    .why__logo{
+        height: 10vh;
+    }
+    .why__text{
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and  (max-width: 1400px) and (min-width: 1200px){
+    
+}
+
+@media screen and  (max-width: 2000px) and (min-width: 1400px){
+    
+}
+
+@media screen and  (max-width: 4000px) and (min-width: 2000px){
+    
+}
+
+@media screen and (max-device-width:768px){
+    .why__heading{
+        font-size: 3.5rem;
+    }
+    .why__row{
+        grid-template-columns: auto auto;
+    }
+    .why__logo{
+        height: 10vh;
+    }
+    .why__text{
+        font-size: 1.5rem;
+    }
+
+}
+
+@media screen and (max-device-width:426px){
+    
+}
